--- a/css/style.css
+++ b/css/style.css
@@ -278,8 +278,8 @@ footer{
     top: 17px;
 }
 .dm-thucung .img-danhmuc{
-    margin: 0 20%;
-    width: 150px;
+     margin: 0 20%;
+     width: 150px;
      height: 150px;
      border-radius: 5px;
 }
@@ -451,7 +451,7 @@ footer{
 
 .owl-carousel .owl-theme{
     width: 100%;
-    height: 120px;
+    height: 150px;
     background-color: #fd7e14;
     display: block;
 }
@@ -460,9 +460,6 @@ footer{
     height: 150px;
     list-style: none;
     position: relative;
-}
-.owl-plugin .owl-item{
-    width: 20% !important;
 }
 .box-thuc-an{
     position: relative;
@@ -577,4 +574,127 @@ footer{
 }
 .t-tin{
     border-radius: 10px;
+}
+.repon-ipad{
+    display: none;
+}
+.owl-item{
+    width: none !important;
+}
+.header-repon{
+    display: none;
+}
+/* reponsive ipad và ipad pro */
+@media only screen and (max-width: 1024px){
+    .text-repon{
+        display: none;
+    }
+    .repon-ipad{
+        display: block;
+    }
+    .repon-ipad .img{
+        text-align: center;
+    }
+    .owl_plugin{
+        display: none !important;
+    }
+    .header-repon{
+        display: block;
+        position: fixed;
+        bottom: 0;
+        height: 100px;
+        background-color: #fff;
+    }
+    .header-repon .icon-rp{
+        font-size: 50px;
+        color: #fd7e14;
+    }
+    .header-repon .box-rp{
+        margin-top: 20px;
+        width: 20%;
+        position: relative;
+    }
+    .header-repon .box-rp-item{
+        border:1px solid rgb(151, 151, 151);
+        background-color: #fff;
+        border-radius: 50%;
+        position: absolute;
+        top: -80px;
+        left: 10%;
+        width: 150px;
+        height: 150px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+    .header-repon .a-dangtin{
+        color: #000;
+        font-size: 20px;
+        font-weight: bold;
+        position: absolute;
+        left: 20%;
+        top: 0%;
+    }
+    footer{
+        margin-top: 10px;
+        background-color: #3B8BEB;
+        min-height: 350px;
+    }
+}
+@media only screen and (max-width: 768px){
+    .header-repon{
+        height: 100px;
+    }
+    .header-repon .icon-rp{
+        font-size: 40px;
+        color: #fd7e14;
+    }
+    .header-repon .box-rp{
+        margin-top: 20px;
+        width: 20%;
+        position: relative;
+    }
+    .header-repon .box-rp-item{
+        border:1px solid rgb(151, 151, 151);
+        background-color: #fff;
+        border-radius: 50%;
+        position: absolute;
+        top: -80px;
+        left: 0%;
+        width: 150px;
+        height: 150px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+    .header-repon .a-dangtin{
+        color: #000;
+        font-size: 20px;
+        font-weight: bold;
+        position: absolute;
+        left: 20%;
+        top: 0%;
+    }
+    .box-tin-rao{
+        position: relative;
+        width: 24%;
+        margin:5px 0.5%;
+    }
+    
+    .dm-thucung .img-danhmuc{
+        margin: 0 0%;
+    }
+   .bg-cuahang{
+    height: 170px;
+    }
+   .bg-chu>h3{
+    font-size: 30px;
+    }
+    .bg-chu>p{
+        font-size: 20px;
+        margin-top: 10px;
+        margin-bottom: 25px;
+    }
+    .bg-cuahang .bg-chu{
+        top: 15px;
+    }
+    .the-a{
+        display: none;
+    }
 }
