--- a/duanlrv/public/adm/assets/css/style.css
+++ b/duanlrv/public/adm/assets/css/style.css
@@ -2519,9 +2519,9 @@ footer.site-footer {
 
 
 
-.cart-bg{
+/* .cart-bg{
   background-image: linear-gradient( 135deg, #72EDF2 10%, #5151E5 100%);
-}
+} */
 .namedm{
    font-size:15px;
    font-weight: bold;
@@ -2554,7 +2554,7 @@ footer.site-footer {
 
 
 .form-trum{
-  background-image: linear-gradient( 135deg, #CE9FFC 10%, #7367F0 100%);
+  background-image: transparent;
    padding:10px 0px;
    border-radius:10px;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
