--- a/duanlrv/public/adm/assets/css/style.css
+++ b/duanlrv/public/adm/assets/css/style.css
@@ -484,6 +484,8 @@ canvas {
     background: #00c292; }
   .order-table .badge-pending {
     background: #fb9678; }
+  .order-table .badge-thongbao {
+    background: #03a9f3; }
 
 .messenger-box {
   padding-top: 15px; }
